# gather

./: .gitignore  README.md  gather.cabal
src/: Main.hs
src/Gather/: DB.hs  Summarize.hs  Types.hs  Utils.hs
