Name:                gather
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable gather
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     == 0.6.1.0,
    base                      >= 4     && < 5,
    bytestring                >= 0.10.2.0 && < 0.11,
    HTTP                      == 4000.2.8,
    KyotoCabinet              == 0.1,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    old-time                  == 1.1.0.0,
    random                    == 1.0.1.1,
    snap-core                 >= 0.9   && < 0.11,
    snap-extras               == 0.6,
    snap-server               >= 0.9   && < 0.11,
    tagsoup                   == 0.12.8,
    text                      == 0.11.3.1,
    transformers              == 0.3.0.0

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
